Lint violation